Fix update feature; Update UI

--- a/public/index.html
+++ b/public/index.html
@@ -2,45 +2,67 @@
 <html data-ng-app="movieapp">
   <head>
     <title>Movie List</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
   </head>
 
   <body>
-    <div class="container" ng-controller="MovieCtrl">
+    <div class="container" data-ng-controller="MoviesController">
+
       <h1>Movie List</h1>
 
-       <table class="table">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Year Released</th>
-            <th>Director</th>
-            <th>Genre</th>
-            <th>&nbsp;</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="movie in movies">
-            <td>{{movie.title}}</td>
-            <td>{{movie.releaseYear}}</td>
-            <td>{{movie.director}}</td>
-            <td>{{movie.genre}}</td>
-            <td><button class="btn btn-danger" data-ng-click="remove(movie._id)">-</button></td>
-          </tr>
-          <tr>
-            <td><input ng-model="movie.title"></td>
-            <td><input ng-model="movie.releaseYear"></td>
-            <td><input ng-model="movie.director"></td>
-            <td><input ng-model="movie.genre"></td>
-            <td><button class="btn btn-info" data-ng-click="addMovie()">+</button></td>
-          </tr>
-        </tbody>
-      </table>
- 
+      <div class="row">
+        <div class="col-md-4">
+          <form name="movieForm">
+            <div class="form-group">
+              <label for="inputTitle">Name:</label><br>
+              <input id="inputTitle" size="25" required data-ng-model="movie.title">
+            </div>
+            <div class="form-group">
+              <label for="inputReleaseYear">Year Released:</label><br>
+              <input id="inputReleaseYear" size="6" required data-ng-model="movie.releaseYear">
+            </div>
+            <div class="form-group">
+              <label for="inputDirector">Director:</label><br>
+              <input id="inputDirector" size="25" required data-ng-model="movie.director">
+            </div>
+            <div class="form-group">
+              <label for="inputGenre">Genre:</label><br>
+              <input id="inputGenre" size="15" required data-ng-model="movie.genre">
+            </div>
+            <button class="btn btn-info" data-ng-click="saveMovie()" data-ng-disabled="movieForm.$invalid || movieForm.$pristine">Save</button>
+          </form>
+        </div>
+        
+        <div class="col-md-8">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Year Released</th>
+                <th>Director</th>
+                <th>Genre</th>
+                <th>&nbsp;</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr ng-repeat="movie in movies">
+                <td>{{movie.title}}</td>
+                <td>{{movie.releaseYear}}</td>
+                <td>{{movie.director}}</td>
+                <td>{{movie.genre}}</td>
+                <td>
+                  <button class="btn btn-warning glyphicon glyphicon-pencil" data-ng-click="editMovie(movie._id)"></button>
+                  <button class="btn btn-danger glyphicon glyphicon-trash" data-ng-click="deleteMovie(movie._id)"></button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
     <script src="./app/main.js"></script>
   </body>
 </html>
